<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="60dp"
    android:clipToPadding="false"
    android:paddingStart="15dp"
    android:paddingEnd="60dp">

    <View
        android:id="@+id/avatar"
        android:layout_alignParentLeft="true"
        android:scaleType="centerInside"
        android:background="@drawable/circle"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/name"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/avatar"
        android:layout_alignTop="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/at_username"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/avatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_body"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:background="@drawable/their_message"
        android:paddingTop="5dp"
        android:paddingBottom="6dp"
        android:paddingHorizontal="16dp"
        android:elevation="2dp"
        android:textSize="16sp"
        android:text="@string/placeholder_message"
        android:layout_alignStart="@+id/name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:text="@string/eg_time2"
        android:textSize="12sp"
        android:layout_below="@id/message_body"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_marginLeft="3dp"
        android:layout_marginStart="3dp">
    </TextView>
</RelativeLayout>