<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:background="#F4F6F9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/root_view_login_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#F4F6F9"
            android:orientation="vertical">



            <ImageView
                android:layout_marginTop="60dp"
                android:id="@+id/imageView"
                android:layout_width="99dp"
                android:layout_height="99dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_logo_vector"
                android:tint="#3987A9"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="16dp"
                android:alpha="0.5"
                android:text="@string/login_label_username"
                android:textColor="#333333"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_background_field"
                android:elevation="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:singleLine="true"
                android:textColor="#333333"
                android:textSize="17sp"
                android:hint="@string/login_label_username"
                android:autofillHints="username"
                android:inputType="text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:alpha="0.5"
                android:text="@string/login_label_password"
                android:textColor="#333333"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_background_field"
                android:elevation="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:singleLine="true"
                android:textColor="#333333"
                android:textSize="17sp"
                android:hint="@string/login_label_password"
                android:autofillHints="password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_btn_login"
                android:layout_width="215dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_background_button_active"
                android:clickable="true"
                android:layout_marginBottom="15dp"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/login_label_button_login"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


</FrameLayout>